--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,11 +42,12 @@ jobs:
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: v1.0.2
-        name: Release v1.0.2
+        tag_name: v1.0.3
+        name: Release v1.0.3
         body: |-
           Release notes here
-          - add release step 
+          - Fix security issues 
+            Reference: https://www.jenkins.io/blog/2018/03/15/jep-200-lts/
         draft: false
         prerelease: false
         files: |
